# khal-autoseguro-agent

./: .gitignore  CHALLENGE.md  README.md  README.pt-BR.md  docker-compose.yml
agent-service/: .env.example  Dockerfile  README.md  pyproject.toml
agent-service/app/: main.py
agent-service/app/agent/: orchestrator.py  prompting.py  rendering.py  tools.py
agent-service/app/agent/policies/: handoff_policy.py
agent-service/app/api/: dependencies.py  schemas.py
agent-service/app/api/routes/: conversations.py
agent-service/app/config/: settings.py
agent-service/app/domain/: models.py  repository.py
agent-service/app/domain/policies/: retry_policy.py
agent-service/app/integrations/llm/: base.py  factory.py  openai_client.py
agent-service/app/observability/: errors.py  logging.py  middleware.py  redact.py
agent-service/docs/: conversation-log-resilience-example.md  conversation-log.json  conversation-log.md
agent-service/tests/: conftest.py
agent-service/tests/e2e/: test_api.py  test_pii_logging.py
agent-service/tests/fakes/: fake_llm_client.py  fake_quote_service_client.py
agent-service/tests/fixtures/: offline_dataset_eval_cases.json
agent-service/tests/integration/: test_quote_service_client.py
agent-service/tests/unit/: test_cep_and_start_date_contract.py  test_domain_models.py  test_handoff_policy.py  test_llm_factory.py  test_offline_dataset_eval_cases.py  test_openai_client_conversion.py  test_orchestrator.py  test_price_guard.py  test_redact.py  test_rendering.py  test_repository.py  test_retry_policy.py  test_tools.py
(+48 files in other folders)
